2006-01-19  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Darin.
        
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6631
        Inspector window has inappropriate maximum height

        * WebInspector.subproj/WebInspector.m:
        (-[WebInspector window]): removes the maximum size constraint

2006-01-19  John Sullivan  <sullivan@apple.com>

        Reviewed by Tim Omernick.

        * WebKit.xcodeproj/project.pbxproj:
        made WebNSUserDefaultsExtras.h private (SPI) so its one method can be called from
        Safari, so Safari can stop calling the similar method in Foundation.

2006-01-19  John Sullivan  <sullivan@apple.com>

        Reviewed by Tim Omernick.
        
        Made _webKit_guessedMIMEType SPI so Safari can use it in order to stop using
        the similar SPI method in Foundation. This involved splitting it out of the file
        it was in, to avoid creating any other new SPI here. Poor svn diff got mighty
        confused in the process.

        * Misc.subproj/WebNSDataExtras.h:
        removed _webkit_guessedMIMEType from here
        * Misc.subproj/WebNSDataExtrasPrivate.h: 
        Added. Contains only _webkit_guessedMIMEType. This file is private (SPI), whereas
        WebNSDataExtras.h is project-internal. I could have renamed WebNSDateExtras.h to
        WebNSDateExtrasInternal.h also, but I minimized the gratuitous change level here
        by not doing that.
        
        * Misc.subproj/WebNSDataExtras.m:
        Despite the great confusion of svn diff, all I actually did here was move 
        _webkit_guessedMIMEType and its helper _webkit_guessedMIMETypeForXML into a new
        category. No lines of code were harmed while creating this patch.

        * WebKit.xcodeproj/project.pbxproj:
        updated for new file

        * WebView.subproj/WebView.m:
        Added #import for new file since WebView uses _webkit_guessedMIMEType

2006-01-19  John Sullivan  <sullivan@apple.com>
